tranning demo app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,6 @@
 <app-header></app-header>
-
-<div id="content">
-    Hi this root component
-</div>
+<posts-panel></posts-panel>
 
 
-<button (click)="clickAction()">
-Change Content
-</button>
+
 
